use maven profile to support modern JDKs